fix best seller background on firefox browser

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -258,6 +258,7 @@ nav
   .best-seller-container
     height: inherit
     .left-container
+      background-color: #FFFFFF
       height: inherit
       #productImgSlider
         height: inherit
